examples/kubernetes/045-istio-10-nginx-combination/devops-istio-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: ingress-istio-routing-nginx-blue
  labels:
    app.kubernetes.io/name: ingress-istio-routing-nginx-blue
  # Need these annotations so istio can work with nginx
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: devops-blue-clusterip.devops.svc.cluster.local
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /devops/blue
            pathType: Prefix
            backend:
              service:
                name: devops-blue-clusterip
                port:
                  number: 8111
